--- a/PreParcial/stylePre.css
+++ b/PreParcial/stylePre.css
@@ -1,57 +1,88 @@
-body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    .container {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    .green {
-      background: green;
-      height: 80px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-    .yellow-box {
-      width: 40px;
-      height: 40px;
-      background: yellow;
-    }
-    .red {
-      background: red;
-      height: 50px;
-    }
-    .content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-    .cards {
-      background: gold;
-      padding: 10px;
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 10px;
-      height: 100%;
-    }
-    .card {
-      background: gray;
-      border: 4px solid green;
-      height: auto;
-      width: auto;
-    }
-    .blue {
-      background: blue;
-      height: 50px;
-    }
-    .purple {
-      background: violet;
-      height: 100px;
-    }
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
-  
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.green {
+  background: green;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.yellow-box {
+  width: 40px;
+  height: 40px;
+  background: yellow;
+}
+
+.red {
+  background: red;
+  height: 50px;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.cards {
+  background: gold;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  height: 100%;
+}
+
+.card {
+  background: gray;
+  border: 4px solid green;
+  height: auto;
+  width: auto;
+}
+
+.blue {
+  background: blue;
+  height: 50px;
+}
+
+.purple {
+  background: violet;
+  height: 100px;
+}
+
+
+@media (min-width: 769px) {
+  .content {
+    flex-direction: row;
+  }
+
+  .blue {
+    flex: 0 0 40%;
+    height: auto;
+  }
+
+  .cards {
+    flex: 1;
+    grid-template-columns: repeat(2, 1fr);
+    align-content: start;
+  }
+
+  .card {
+
+    height: 340px;
+  }
+}
